--- a/task-3.4/src/components/TicTacToeField/TicTacToeField.scss
+++ b/task-3.4/src/components/TicTacToeField/TicTacToeField.scss
@@ -3,4 +3,6 @@
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(3, 1fr);
 	background-color: #313131;
+	padding: 0.5rem;
+	border-radius: 8px;
 }
