--- a/task-3.4/src/share/TicTacToeCell/TicTacToeCell.scss
+++ b/task-3.4/src/share/TicTacToeCell/TicTacToeCell.scss
@@ -14,3 +14,39 @@
 		background-image: url(../../assets/x.svg);
 	}
 }
+
+.cellN0 {
+	border-top: 0;
+	border-left: 0;
+}
+
+.cellN1 {
+	border-top: 0;
+}
+
+.cellN2 {
+	border-top: 0;
+	border-right: 0;
+}
+
+.cellN3 {
+	border-left: 0;
+}
+
+.cellN5 {
+	border-right: 0;
+}
+
+.cellN6 {
+	border-left: 0;
+	border-bottom: 0;
+}
+
+.cellN7 {
+	border-bottom: 0;
+}
+
+.cellN8 {
+	border-bottom: 0;
+	border-right: 0;
+}
