Implement status logic for tic-tac-toe; start working on chat

--- a/task-3.4/src/components/TicTacToeField/TicTacToeField.scss
+++ b/task-3.4/src/components/TicTacToeField/TicTacToeField.scss
@@ -5,4 +5,11 @@
 	background-color: #313131;
 	padding: 0.5rem;
 	border-radius: 8px;
+	width: fit-content;
+}
+
+.status {
+	font-size: 2rem;
+	font-weight: 500;
+	color: #ef9919;
 }
