--- a/task-3.4/src/components/Chat/Chat.scss
+++ b/task-3.4/src/components/Chat/Chat.scss
@@ -1,6 +1,6 @@
 .chat {
 	min-width: 640px;
-	min-height: 485px;
+	height: 485px;
 	display: grid;
 	grid-template-rows: min-content auto min-content;
 	background-color: #313131;
@@ -42,4 +42,40 @@
 	color: #fff;
 	width: fit-content;
 	text-transform: capitalize;
+}
+
+.messageBubble {
+	color: #fff;
+}
+
+.chatInput {
+	position: relative;
+	padding: 1.5rem;
+}
+
+.input {
+	width: 100%;
+	padding: 0.8rem;
+	padding-right: 40px;
+	border: 1px solid #8b8b8b;
+	border-radius: 8px;
+	background-color: #424242;
+	color: #fff;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 20px;
+}
+
+.sendBtn {
+	width: 20px;
+	height: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+	right: calc(1.5rem + 10px);
+	position: absolute;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-image: url(../../assets/send.svg);
+	background-color: transparent;
 }
