--- a/task-3.4/src/index.scss
+++ b/task-3.4/src/index.scss
@@ -17,13 +17,19 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	margin: 0;
+}
+
 html {
 	font-size: 16px;
 }
 
 body {
 	margin: 0;
-	display: flex;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
