Update useCart hook; update CartPage and navigation

--- a/task-3.5/src/share/StoreLinkBtn/StoreLinkBtn.scss
+++ b/task-3.5/src/share/StoreLinkBtn/StoreLinkBtn.scss
@@ -2,6 +2,7 @@
 	background-color: #00ae1c;
 	border: 1px #00ae1c solid;
 	color: #fff;
+	font-weight: 400;
 	padding: 0.25rem 1.25rem;
 	border-radius: 8px;
 	cursor: pointer;
