--- a/task-3.5/src/share/StoreLink/StoreLink.scss
+++ b/task-3.5/src/share/StoreLink/StoreLink.scss
@@ -20,3 +20,13 @@
 		text-decoration: none;
 	}
 }
+
+a.disabled {
+	cursor: not-allowed;
+	pointer-events: none;
+}
+
+.disabled .storeLink {
+	color: #243573 !important;
+	text-decoration: none !important;
+}
