--- a/task-3.6/src/index.scss
+++ b/task-3.6/src/index.scss
@@ -26,11 +26,17 @@ a:hover {
 	color: #535bf2;
 }
 
+html {
+	min-height: 100%;
+	height: 100%;
+}
+
 body {
 	margin: 0;
-	place-items: center;
+	// place-items: center;
 	min-width: 320px;
-	min-height: 100vh;
+	// min-height: 100%;
+	height: 100%;
 }
 
 h1 {
