Implement Modal component

--- a/task-3.6/src/ui-kit/Modal/Modals.scss
+++ b/task-3.6/src/ui-kit/Modal/Modals.scss
@@ -7,3 +7,17 @@
 	background-color: #00000080;
 	z-index: 98;
 }
+
+.appearance-animate {
+	animation: appearance 0.15s ease;
+}
+
+@keyframes appearance {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
