--- a/task-3.8/frontend/src/components/TodoList/TodoList.scss
+++ b/task-3.8/frontend/src/components/TodoList/TodoList.scss
@@ -6,5 +6,18 @@
 }
 
 .todoList {
+	border-radius: 8px;
 	background-color: #fff;
+}
+
+.todoListHeader {
+	padding: 1rem 1.6rem;
+	box-shadow: 0px 1px 2px 0px #dedfe5;
+}
+
+.todoListBody {
+	display: flex;
+	flex-direction: column;
+	padding: 1.6rem;
+	gap: 1.5rem;
 }
