--- a/task-3.8/frontend/src/components/TodoSearch/TodoSearch.scss
+++ b/task-3.8/frontend/src/components/TodoSearch/TodoSearch.scss
@@ -1,6 +1,23 @@
-.todoSearch {
-	width: 100%;
+.todoForm {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 100%;
+}
+
+.todoFormInput {
+	width: 100%;
+	margin-right: 5px;
+	padding-left: 1.6rem;
+
+	& input {
+		width: 100%;
+		height: 100%;
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 2rem;
+		border: 0;
+		outline: none;
+	}
 }
