Setup icon btn; update UI; update Button component

--- a/task-3.8/frontend/src/components/TodoCard/TodoCard.scss
+++ b/task-3.8/frontend/src/components/TodoCard/TodoCard.scss
@@ -27,3 +27,10 @@ $gray: #dedfe5;
 .line-through {
 	text-decoration: line-through;
 }
+
+.todoCardActions {
+	display: flex;
+	flex-direction: row;
+	width: 75px;
+	justify-content: space-between;
+}
