--- a/task-3.8/frontend/src/components/TodoList/TodoList.scss
+++ b/task-3.8/frontend/src/components/TodoList/TodoList.scss
@@ -9,7 +9,7 @@
 	border-radius: 8px;
 	background-color: #fff;
 	overflow: hidden;
-	box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+	box-shadow: 0px 4px 4px 0px #0000001a;
 }
 
 .todoListHeader {
