--- a/task-3.8/frontend/src/components/TodoCard/TodoCard.scss
+++ b/task-3.8/frontend/src/components/TodoCard/TodoCard.scss
@@ -22,6 +22,14 @@ $gray: #dedfe5;
 	font-size: 1rem;
 	border-left: 1px $gray solid;
 	outline: none;
+	height: fit-content;
+}
+
+.todoText {
+	& textarea {
+		width: 100%;
+		border: 0;
+	}
 }
 
 .line-through {
